<!-- 通用布局  工具栏  1 -->
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/common_toolbar_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="horizontal"
    
    android:gravity="center_vertical"
    android:background="@color/white" >
    <RadioButton
        android:id="@+id/common_toolbar_1_home"
        android:checked="true"
        style="@style/Common_Toolbar_RadioButton"
		android:drawableTop="@drawable/bg_toolbar_home"
		android:text="@string/common_toolbar_1_home"
		android:textColor="@color/mainblue"
		android:paddingLeft="0dp"/>
    <RadioButton
        android:id="@+id/common_toolbar_1_discovery"
        style="@style/Common_Toolbar_RadioButton"
		android:drawableTop="@drawable/bg_toolbar_service_network"
		android:text="@string/common_toolbar_1_service_network"
		android:paddingLeft="0dp"/>
    
    <RadioButton
        android:id="@+id/common_toolbar_1_mine"
        style="@style/Common_Toolbar_RadioButton"
		android:drawableTop="@drawable/bg_toolbar_mine"
		android:text="@string/common_toolbar_1_mine"
		android:paddingLeft="0dp"/>
</RadioGroup>