<!-- 我的订单页面 body部分 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg">
   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:background="@color/white" >
        <TextView
            android:id="@id/my_order_xml_payment"
            android:clickable="true"
            android:onClick="onViewClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:background="@drawable/bg_white"
            android:textColor="@color/mainblue"
            android:text="@string/my_order_topbar_non_payment"/>
        <TextView
            android:id="@id/my_order_xml_non_payment"
            android:clickable="true"
            android:onClick="onViewClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:background="@drawable/bg_white"
            android:textColor="@color/black"
            android:text="@string/my_order_payment_payment"/>
        <TextView
            android:id="@id/my_order_xml_in_service"
            android:clickable="true"
            android:onClick="onViewClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:background="@drawable/bg_white"
            android:textColor="@color/black"
            android:text="@string/my_order_topbar_in_service"/>
        <TextView
            android:id="@id/my_order_xml_wait_for_evaluate"
            android:clickable="true"
            android:onClick="onViewClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:background="@drawable/bg_white"
            android:textColor="@color/black"
            android:text="@string/my_order_topbar_wait_for_evaluate"/>
        <TextView
            android:id="@id/my_order_xml_wait_for_refund"
            android:clickable="true"
            android:onClick="onViewClick"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:background="@drawable/bg_white"
            android:textColor="@color/black"
            android:text="@string/my_order_payment_refund"/>
    </LinearLayout>
    <FrameLayout
        android:id="@id/my_order_xml_fragment_root"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       android:layout_margin="5dp"
       android:layout_marginBottom="0dp"
       
        
        >
    </FrameLayout>
</LinearLayout>