<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/RelativeLayout_pay_fail001"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:visibility="gone" >

        <ImageView
            android:id="@+id/imageView_pay_fail001"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/pay_failed" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_pay_fail001"
            android:layout_centerHorizontal="true"
            android:padding="10dp"
            android:text="@string/text_withdraw_System_busy"
            android:textColor="@color/mainblue"
            android:textSize="20sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/LinearLayout_pay_success001"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="50dp"
            android:src="@drawable/pay_success" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/text_withdraw_cash_success"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/text_withdraw_cash_success_prompt"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@color/common_bg"
            android:orientation="vertical"
            android:padding="1dp" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_bankname"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/TextView_withdraw_bank_name001"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/TextView_withdraw_bank_text001"
                    android:text="@string/text_bank_of_jianshe"
                    android:textColor="@color/inputblack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/TextView_withdraw_bank_text001"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/TextView_withdraw_bank_endnum001"
                    android:text="@string/text_bank_end_four_num"
                    android:textColor="@color/inputblack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/TextView_withdraw_bank_endnum001"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="0069"
                    android:textColor="@color/inputblack"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@color/white"
                android:padding="10dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_cash"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@+id/TextView_withdraw_cash_num001"
                    android:text="@string/text_money_mark"
                    android:textColor="@color/inputblack"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/TextView_withdraw_cash_num001"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/inputblack"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/TextView_finish_to_mainactivity001"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/yuanjiao_button_lan"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/button_finish"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>