<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/common_bg">

    <TextView
        android:paddingTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_withdraw_info001" 
        android:textColor="@color/black"/>
    <LinearLayout 
        android:paddingBottom="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
       <TextView
           android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="手机" />
       <TextView
           android:id="@+id/withdraw_userphone001"
           android:textColor="@color/inputblack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="***********" />
       <TextView
           android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=",请安提示操作" /> 
    </LinearLayout>
     <RelativeLayout
            android:background="@color/white"
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="@color/black"
                 android:padding="5dp"
                android:layout_centerVertical="true"
                android:id="@+id/TextView_confirmation_phone_text001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_confrimation_phone" />

            <EditText
                android:id="@+id/EditText_phone_conformation_vecode001"
                android:padding="20dp"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/TextView_confirmation_phone_text001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@color/transparent"
                android:hint="@string/text_confrimation_phone_hint"
                android:textColor="@color/inputblack" 
                android:inputType="number"/>
            <TextView
                android:id="@+id/TextView_set_withdraw_password_get_confirmationnum001"
                android:padding="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_get_phonedata" 
                android:textColor="@color/mainblue"/>
        </RelativeLayout>
 
   <TextView
       android:id="@+id/TextView_set_withdraw_password001"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/yuanjiao_button_lan"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/button_finish"
        android:textSize="18sp"
        android:textColor="@color/white" />
</LinearLayout>
